problema con foto

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <!-- Tool-bar with logo, options and access -->
     <header>
         <div class="tool-bar">
-            
             <div class="logo">
+                <img src="./img/logo.svg" alt="Image logo">
             </div>
 
             <nav>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Scarica</li>
+                <li>Perch&eacute; Discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
             </nav>
 
             <div class="access"></div>
