--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Tool-bar with logo, options and access -->
     <header>
-        <div class="tool-bar">
+        <div class="toolbar">
             <div class="logo">
                 <img src="./img/logo.svg" alt="Image logo">
             </div>
