--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 <body>
     <!-- Tool-bar with logo, options and access -->
     <header>
-        <div class="toolbar">
-            <div class="logo">
-                <img src="./img/logo.svg" alt="Image logo">
-            </div>
+        <div class="toolbar clearfix">
+                <div class="logo float fl">
+                    <img src="./img/logo.svg" alt="Image logo">
+                </div>
+                <nav>
+                    <li>Scarica</li>
+                    <li>Perch&eacute; Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </nav>
 
-            <nav>
-                <li>Scarica</li>
-                <li>Perch&eacute; Discord</li>
-                <li>Nitro</li>
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
-            </nav>
-
-            <div class="access"></div>
+                <div class="access float fr">
+                    <input id="button" type="submit"value="accedi">
+                </div>
         </div>
     </header>
     <main>
