--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css/">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet"> 
     
     <title>Discord</title>
 </head>
 
-<!-- Image as background in body -->
 <body>
     <!-- Tool-bar with logo, options and access -->
     <header>
         <div class="toolbar clearfix">
-                <div class="logo float fl">
+                <div class="logo fl">
                     <img src="./img/logo.svg" alt="Image logo">
                 </div>
                 <nav>
@@ -26,8 +29,17 @@
                 </nav>
 
                 <div class="access float fr">
-                    <input id="button" type="submit"value="accedi">
+                    <input id="button" type="submit" value="Accedi">
                 </div>
+        </div>
+            <div class="text">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di games, comunit&agrave; artistica mondiale, o semplicemente dui un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiaccherare ogni giorno e ritrovarsi pi&ugrave;spesso.</p>
+                <div id="input">
+                    <input class="big-button download" id="download-1" type="submit" value="&#8595; Scarica per mac">
+                    <input class="big-button" id="open-browser" type="submit" value="Apri Discord nel tuo browser">
+                </div>  
+            </div>
         </div>
     </header>
     <main>
