--- a/index.html
+++ b/index.html
@@ -35,17 +35,52 @@
             <div class="text">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di games, comunit&agrave; artistica mondiale, o semplicemente dui un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiaccherare ogni giorno e ritrovarsi pi&ugrave;spesso.</p>
-                <div id="input">
-                    <input class="big-button download" id="download-1" type="submit" value="&#8595; Scarica per mac">
-                    <input class="big-button" id="open-browser" type="submit" value="Apri Discord nel tuo browser">
-                </div>  
+                <input class="big-button download" id="download-1" type="submit" value="&#8595; Scarica per mac">
+                <input class="big-button" id="open-browser" type="submit" value="Apri Discord nel tuo browser">
             </div>
         </div>
     </header>
     <main>
-        <div>
+        <!-- First section -->
+        <section>
+            <div class="fl">
 
-        </div>
+            </div>
+            <div class="fr">
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
+        <!-- Second section -->
+        <section class="fr">
+            <div>
+
+            </div>
+            <div class="fl">
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
+         <!-- Third section -->
+         <section>
+            <div class="fl">
+
+            </div>
+            <div class="fr">
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
+        <!-- Fourth section -->
+        <section>
+            <div>
+
+            </div>
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
     </main>
     <footer>
 
