problem with float

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     </header>
     <main>
         <!-- First section -->
-        <section>
+        <section class="padding-top">
             <div class="fl">
-
+                <img src="./img/item1.svg" alt="">
             </div>
-            <div class="fr">
-                <h1></h1>
-                <p></p>
+            <div id="text-two" class="fr">
+                <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
         <!-- Second section -->
-        <section class="fr">
-            <div>
+        <section class="padding-top">
+            <div class="fr">
 
             </div>
             <div class="fl">
@@ -62,7 +62,7 @@
             </div>
         </section>
          <!-- Third section -->
-         <section>
+         <section class="padding-top">
             <div class="fl">
 
             </div>
@@ -72,7 +72,7 @@
             </div>
         </section>
         <!-- Fourth section -->
-        <section>
+        <section class="padding-top">
             <div>
 
             </div>
