--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css/">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <!-- Tool-bar with logo, options and access -->
     <header>
+        <!-- part-one -->
         <div class="toolbar clearfix">
                 <div class="logo fl">
                     <img src="./img/logo.svg" alt="Image logo">
@@ -32,55 +32,68 @@
                     <input id="button" type="submit" value="Accedi">
                 </div>
         </div>
-            <div class="text">
-                <h1>Il tuo posto per parlare</h1>
-                <p>Che tu faccia parte di un club scolastico, gruppo di games, comunit&agrave; artistica mondiale, o semplicemente dui un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiaccherare ogni giorno e ritrovarsi pi&ugrave;spesso.</p>
-                <input class="big-button download" id="download-1" type="submit" value="&#8595; Scarica per mac">
-                <input class="big-button" id="open-browser" type="submit" value="Apri Discord nel tuo browser">
-            </div>
+        <!-- part-two -->
+        <div class="centered text">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di games, comunit&agrave; artistica mondiale, o semplicemente dui un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiaccherare ogni giorno e ritrovarsi pi&ugrave;spesso.</p>
+            <input class="big-button download" id="download-1" type="submit" value="&#8595; Scarica per mac">
+            <input class="big-button" id="open-browser" type="submit" value="Apri Discord nel tuo browser">
+        </div>
         </div>
     </header>
     <main>
         <!-- First section -->
-        <section class="padding-top">
+        <section class="view-height">
             <div class="fl">
-                <img src="./img/item1.svg" alt="">
+                <img class="img-characteristics" src="./img/item1.svg" alt="">
             </div>
-            <div id="text-two" class="fr">
+            <div class="fl text-two">
                 <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                 <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
         <!-- Second section -->
-        <section class="padding-top">
-            <div class="fr">
-
-            </div>
-            <div class="fl">
-                <h1></h1>
-                <p></p>
-            </div>
-        </section>
+        <div class="bg-lightgrey">
+            <section class="view-height">
+                <div class="fr">
+                    <img class="img-characteristics" src="./img/item2.svg" alt="">
+                </div>
+                <div class="fr text-two">
+                    <h1>Dove trovarsi &egrave; facile</h1>
+                    <p>mettiti comodo in un canale vocale quando hai tempo. Gli amici server possono vedere che sei l&igrave; e unirsi istantantaneamente senza dover chiamare.</p>
+                </div>
+            </section>
+        </div>
          <!-- Third section -->
-         <section class="padding-top">
+         <section class="view-height">
             <div class="fl">
-
+                <img class="img-characteristics" src="./img/item3.svg" alt="">
             </div>
-            <div class="fr">
-                <h1></h1>
-                <p></p>
+            <div class="fl text-two">
+                <h1>Da pochi a un fandom</h1>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
             </div>
         </section>
         <!-- Fourth section -->
-        <section class="padding-top">
-            <div>
-
-            </div>
-            <div>
-                <h1></h1>
-                <p></p>
-            </div>
-        </section>
+        <div class="bg-lightgrey longer">
+            <section class="view-height">
+                <div class="centered">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stesssa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessi9one disegno con la condivisione schermo.</p>
+                </div>
+                <div>
+                    <img id="centered-img" src="./img/item4-big.svg" alt="">
+                </div>
+                <div>
+                    <div class="centered">
+                        <img src="./img/stars.svg" alt="">
+                        <h2>Pronto a iniziare la tua avventura?</h2>
+                    </div>
+                     <input class="big-button download" id="download-2" type="submit" value="&#8595; Scarica per mac">
+                </div>
+            </section>
+        </div>
+       
     </main>
     <footer>
 
