second section non centered

--- a/index.html
+++ b/index.html
@@ -43,40 +43,44 @@
     </header>
     <main>
         <!-- First section -->
-        <section class="view-height">
-            <div class="fl">
-                <img class="img-characteristics" src="./img/item1.svg" alt="">
-            </div>
-            <div class="fl text-two">
-                <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+        <section>
+            <div class="clearfix  view-height">
+                <div class="fl">
+                    <img class="img-characteristics" src="./img/item1.svg" alt="">
+                </div>
+                <div class="fl text-two">
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
         <!-- Second section -->
-        <div class="bg-lightgrey">
-            <section class="view-height">
-                <div class="fr">
-                    <img class="img-characteristics" src="./img/item2.svg" alt="">
-                </div>
-                <div class="fr text-two">
+        <section class="bg-lightgrey">
+            <div class="clearfix  view-height">
+                <div class="fl text-two">
                     <h1>Dove trovarsi &egrave; facile</h1>
                     <p>mettiti comodo in un canale vocale quando hai tempo. Gli amici server possono vedere che sei l&igrave; e unirsi istantantaneamente senza dover chiamare.</p>
                 </div>
-            </section>
-        </div>
-         <!-- Third section -->
-         <section class="view-height">
-            <div class="fl">
-                <img class="img-characteristics" src="./img/item3.svg" alt="">
+                <div class="fl">
+                    <img class="img-characteristics" src="./img/item2.svg" alt="">
+                </div>
             </div>
-            <div class="fl text-two">
-                <h1>Da pochi a un fandom</h1>
-                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
+        </section>
+         <!-- Third section -->
+         <section>
+            <div class="clearfix  view-height">
+                <div class="fl">
+                    <img class="img-characteristics" src="./img/item3.svg" alt="">
+                </div>
+                <div class="fl text-two">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro</p>
+                </div>
             </div>
         </section>
         <!-- Fourth section -->
-        <div class="bg-lightgrey longer">
-            <section class="view-height">
+        <section class="bg-lightgrey">
+            <div class="clearfix view-height">
                 <div class="centered">
                     <h1>Tecnologia affidabile per tenersi in contatto</h1>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stesssa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessi9one disegno con la condivisione schermo.</p>
@@ -90,8 +94,8 @@
                         <h2>Pronto a iniziare la tua avventura?</h2>
                     </div>
                      <input class="big-button download" id="download-2" type="submit" value="&#8595; Scarica per mac">
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
        
     </main>
