added padding to center columns

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="fl">
                     <img class="img-characteristics" src="./img/item1.svg" alt="">
                 </div>
-                <div class="fl text-two">
+                <div class="fl text-two more-down">
                     <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
@@ -56,7 +56,7 @@
         </section>
         <!-- Second section -->
         <section class="bg-lightgrey">
-            <div class="clearfix  view-height">
+            <div class="clearfix  view-height more-right">
                 <div class="fl text-two">
                     <h1>Dove trovarsi &egrave; facile</h1>
                     <p>mettiti comodo in un canale vocale quando hai tempo. Gli amici server possono vedere che sei l&igrave; e unirsi istantantaneamente senza dover chiamare.</p>
